--- a/md/高程.md
+++ b/md/高程.md
@@ -28,3 +28,20 @@ TODO : 8如何开启？
 if(test) console.log(1);  // 可以执行但是不好
 if(test){console.log(1)};  // 好
 ```
+
+## var声明变量仅在代码块中有效
+
+```javascript
+function test(){
+	var message = 'hi'; //局部变量
+}
+test();
+alert(message); // 错误！
+```
+```
+function test(){
+	message = 'hi';
+}
+test();
+alert(message);
+```
