--- a/read-book/程序员修炼之道.md
+++ b/read-book/程序员修炼之道.md
@@ -1,1 +1,6 @@
-昨天看了1，2节， 今天敲代码就 戾气很重，感觉代码都是垃圾。很像重构
+# 程序员修炼之道
+*都按照几点来分配，这样可以快速对应到对应的问题*
+## 1-2点
+昨天看了1-2点，联想了下自己项目的代码，就不敢继续读下去了，有点恐怖。怕再看下去，就把自己砍死。
+然后今天上班的时候，尝试按照1-2点来编程，结果发现基本寸步难行。
+做个类比
