--- a/read-book/程序员修炼之道.md
+++ b/read-book/程序员修炼之道.md
@@ -1,1 +1,11 @@
-昨天看了1，2节， 今天敲代码就 戾气很重，感觉代码都是垃圾。很像重构
+# 程序员修炼之道 *都按照几点来分配，这样可以快速对应到对应的问题*
+特此记录，免得自己渐渐被时间抹去棱角
+ ## 1-2点 
+昨天看了1-2点，联想了下自己项目的代码，就不敢继续读下去了，有点恐怖。怕再看下去，就把自己砍死。 
+
+然后今天上班的时候，尝试按照1-2点来编程，结果发现基本寸步难行。 做个类比，就好比之前的代码就是垃圾，而且这些垃圾占满了地上，导致我想去丢垃圾的时候根本下不去脚，我就只能从垃圾之间的空隙慢慢的挪过去，这就导致了下午3小时，才完成了不确定的进度，而且自己完全不能估算剩余的完成时间。
+
+最后我妥协了，就好像今晚如果不及时的记录下来，明天，后天，慢慢我也就妥协了。 但是今天也不是完全妥协，因为项目本来就是先完成再优化(能力强的，爱咋样咋样)。和当初发展城市一样，谁不知道牺牲环境来换取经济利益是错误的方式，但是如果你不去牺牲，或者一定要一开始就走可持续，那么你还没发展起来，别人就远超与你，甚至他都反过来开始有经济条件治理环境。
+
+所以。我把代码给回退了，然后决定先把垃圾倒在家门口，等有空了把垃圾一点一点的清理到垃圾桶里(但愿这个空来的快点，至少在我还想要清理垃圾的时候)，然后花了20分钟，就完成了指定的任务，同时，家门口多了一堆自己厌恶的垃圾。有空再清理吧，自己对自己说。                                 
+<span style="float: right">-2018-7-23</span>
