--- a/md/高程.md
+++ b/md/高程.md
@@ -45,3 +45,9 @@ function test(){
 test();
 alert(message);
 ```
+
+## 基础类型和 typeof
+```js
+6大基础类型： Number String Boolean Object Undefined Null
+typeof 返回值-7种： Number String Boolean Object Undefined Null Function(基础类型中属于Object))
+```
