--- a/md/高程.md
+++ b/md/高程.md
@@ -51,3 +51,31 @@ alert(message);
 6大基础类型： Number String Boolean Object Undefined Null
 typeof 返回值-7种： Number String Boolean Object Undefined Null Function(基础类型中属于Object))
 ```
+
+### 数据类型
+1. null
+> null值表示一个空对象指针,所以 typeof null 会返回一个 'object'
+
+同时 null的含义也代表不存在-- `Object.prototype.__proto__`, 如果代表存在，但是未定义的话  应该用`undefined`,
+> 当然如果想要定义一个变量将来用来保存对象，可以直接将其赋值为`null`,这样可以用 `xx !== null`来判断是否执行后续的操作。
+
+2. Boolean
+数字类型里的 `0`和`NaN`会转换成 `false`
+
+3. Number
+> 由于保存浮点数值需要的内存空间是保存整数值的两倍,因此 ES会不失时机的将浮点数转换成整数
+```js
+var a = 10.0;
+a === 10;// true
+```
+> 关于浮点数值计算会产生舍入误差的问题，有一点需要明确:这是使用基于IEEE754数值的浮点计算的通病。 `0.1 + 0.2 // 0.30000000000000004`
+> 在进行极大极小值计算时，要避免触碰到js的最大最小值. `Number.MAX_VALUE; // 1.7976931348623157e+308` 和 `Number.MIN_VALUE; // 5e-324`
+
+4. String
+> 可以用toString()方法来将其他类型的值转换成str类型(null 和 undefined不行). 同时 str也有toSting()方法，来生成一个副本。
+
+5. Object 几个方法
+* hasOwnProperty 查看某个属性是否在当前对象实例中(而不是在原型里)
+* isPrototypeOf 用于检查传入的对象是否是另一个对象的原型
+* propertyIsEnumerable(propertyName) 用于判断给定的属性能否用 for-in语句来枚举
+* toLocal
