--- a/md/高程.md
+++ b/md/高程.md
@@ -181,6 +181,7 @@ var a={
 parseInt(0.0000004)  // 4
 ![]==[] //true
 ['x','y'] == 'x,y' //true
+'5' + - + - - + - - + + - + - + - - - '2' // '52'
 ```
 
 1. 
@@ -204,4 +205,177 @@ false == []; // 当"=="号两边其中一个是布尔值的话，先把它转换
 ['x', 'y'] == 'x,y'; // 当"=="的一边是字符串或数字，另一边是对象的时候（数组也是对象），先把对象值转换为Number(先valueOf)或str(先toString)再判断相等
 ['x', 'y'].toString() == 'x,y';
 'x,y' == 'x,y'; //true
+```
+
+4. 
+```js
+'5' + - + - - + - - + + - + - + - - - '2'; // 因为 + 对计算不会影响，所以去掉所有 +
+'5' - - - - - - - - - - '2'; // 2个-就抵消，并把 ‘2’转化成 2. 因为 - - '2' === 2
+'5' - -  '2'; // 去掉2个 - ，替换成 +
+'5' + '2'; // '52'
+```
+
+### 操作符
+
+#### 位操作符
+> 原码 就是 他自身的二进制码 10 1010
+> 反码 正数就是他本身原码， 负数的话是除了符号位 1-0转换 10 0101
+> 补码 正数就是他本身原码， 负数的话是原码符号位不变，其他做1-0转换，结果+1。 同时，转回原码也是除符号取反+1
+18的二进制码 `10010`
+-18的二进制码
+```
+1. 先将 18的32位二进制码  1-0转换
+11111111111111111111111111101101
+2. 1的基础上 + 1
+11111111111111111111111111101110
+```
+利用toSring可以看到 `(-18).toString(2)// -10010`其实就是 18前面添一个 `-`,并不涉及其他
+
+1. 按位非(~),32位二进制码1-0转换
+```js
+var num = 25;
+var num1 = ~num;
+console.log(num1); // -26
+```
+其实可以从之前的18 -18反转得知，当 0-1转换后，会比原来的数字的负数-1,类似于`num1 = -num - 1`
+
+2. 按位与(&)
+类似于 判断里面的`&&`， 所以
+```js
+console.log(25&3);// 1
+// 11001     25
+// 00011      3
+// 00001      1
+```
+
+3. 按位或(|)
+类似于 判断里面的`||`， 所以
+```js
+console.log(25|3);// 27
+// 11001     25
+// 00011      3
+// 11011     27
+```
+
+4. 按位异或(^)
+不一样，则为1，否则为0
+```js
+console.log(25^3);// 27
+// 11001     25
+// 00011      3
+// 11010     26
+```
+
+5. 位移 << 向左 >> 向右 --- 特别注意，位移都是按照其补码进行位移
+```js
+11 >> 1;
+// 1011    补码
+// 101     位移后 -- 1+4 = 5
+
+-13 << 1;
+// - 1101    原码
+// - 0011    补码
+// - 00110    位移后的补码
+// - 11010    位移后的原码  -- 16+8+2 = -26
+```
+
+#### 乘法 除法 取余
+如果有一边不是数值，就会调用Number()来进行转换
+```js
+Infinity * Infinity; // Infinity
+Infinity / Infinity; // NaN
+Infinity * 0; // NaN
+Infinity * 数字; // +-Infinity
+NaN // .... 不管 + - * / 都为NaN
+0/0; // NaN
+非0 / 0 ; // +-Infinity
+Infinity / 非0; // +-Infinity
+
+0 % x; // 0  x不能为NaN
+Infinity % x; // NaN
+x % 0; // NaN
+Infinity % Infinity; // NaN
+x % Infinity; // x    x为有限大值
+```
+
+#### 加
+```js
+Infinity + Infinity; // Infinity
+(-0) + (-0); // -0
+(+0) + (-0); // +0
+```
+1. 如果都是字符串， 则直接拼接
+2. 如果有一个是字符串，则把另个转化成字符串，再进行拼接
+3. 如果是 对象，数值，布尔值，则调用toString进行拼接
+
+#### 减
+```js
+Infinity - Infinity; // NaN
+-Infinity - (-Infinity); // NaN
+Infinity - (-Infinity); // Infinity
+-Infinity - Infinity; // -Infinity
++0 - +0; // +0
++0 - -0; // +0
+-0 - -0; // +0
+```
+1. 如果有一个是 字符串，布尔值， null 或 undefined，则先调用Number()进行转换，如果是NaN，则结果为NaN
+2. 如果有一个是对象， 则先调用valueOf，不行再toString，再转成Number，再计算
+
+#### 关系比较符
+1. 数字 就比较大小
+2. 字符 就比较字符串对应的字符编码值
+```js
+// 按照字符串的index，依次比较  而不是比 总和
+var a = 'Abbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb';
+var b = 'b'
+a < b; // true, 因为大写字母比小写的要小, 所以比较 也记得要用toLowerCase转化后再比较
+
+'23' < '3' ; // true, 因为依次比较  '2'<'3',所以 true
+```
+3. 有一个是数值，就把另一个转为数值
+4. 一个是对象，则调用valueOf，不行再toString
+5. 一个是布尔，就转化成数值，再比较
+6. 任何与NaN的比较 都会返回 false
+
+#### 相等比较符
+等于和不等于
+1. 有一个是bool，则先将bool转成数值 true-1,false-0
+2. 一字符，一数值，将字符转成数值
+3. 一个对象一个不是对象，先调用对象的valueOf，转换后再比较
+4. NaN不相等都为true，相等都为false(即使是NaN == NaN // false)
+5. 两个对象，则比较指向位置是否相同，而不是valueOf
+
+全等和不全等： 不进行转换比较
+
+### 语句
+#### for in
+用来循环输出 obj的key, 因为obj是无序的，所以 key输出可能顺序不能。<br>
+其次，低版本的es如果value值为`null`或`undefined`,会抛出错误.
+es5中会终端循环，es6会输出.
+
+
+
+# ask:
+1. P48页的toString方法问题
+```js
+var bbb = {
+  i: 10,
+  toString: function() {
+    console.log('toString');
+    return this.i;
+  },
+  valueOf: function() {
+    console.log('valueOf');
+    return this.i;
+  }
+}
+
+bbb + 1// valueOf 11
+bbb + '1' // valueOf 101
+```
+> [valueOf和toString](https://www.cnblogs.com/rubylouvre/archive/2010/10/01/1839748.html)  在有操作符的情况下，valueOf的优先级本来就比toString的高
+
+2. P49 最下面
+```
+如果是 +0 减 -0， 则结果是 -0
 ```
