--- a/md/高程.md
+++ b/md/高程.md
@@ -395,6 +395,28 @@ console.log(obj);
 > 优化内存占用的最佳方式,就是为执行中的代码只保存必要的数据.一旦数据不再有用,最好通过将其值设置为`null`来释放引用----这个做法叫做解除引用.
 一般和`continue` 和 `break`用于跳过多重循环
 
+## 引用类型
+### Array类型
+#### 检测数组
+```js
+xxx_arr instanceof Array; // 正常情况下可以用，但如果涉及多框架嵌套，他们全局不是同一个就会报错
+Array.isArray(xxx_arr); // 任何情况都行， es5开始支持(ie9+)
+```
+
+#### 转换方法
+1. toString(), 返回数组中每个值的字符串toString(),再join(',').等同于 arr.toString() === arr.map(i => i.toString()).join(',')
+2. valueOf返回本身,即 arr === arr.valueOf()
+3. toLocaleString(), 每个值都执行toLocaleString(),再join(','), 与1同理
+
+#### 重排序方法
+1. sort()方法总是比较字符串，即使数组中的值不是字符串，也会转化成字符串再进行比较。可以自定义比较函数传入。
+
+#### 操作方法
+1. arr.concat(x,y,z), 会在arr的基础上 push进去x,y,z中的每个值. arr不会被影响
+2. slice(begin, end) 包括b不包e, begin开始的位置，可以用负数来表示位置,如果缺少end,则到最后， 如果 begin >= end,则返回[]
+3. splice(begin, num, val, val,val,val) begin为起始位置,num为数量(不填则表示到数组末尾, 负数则默认为0),val为插入的值(可不填),可以插入多个值. 
+
+
 # ask:
 1. P48页的toString方法问题
 ```js
@@ -423,3 +445,5 @@ bbb + '1' // valueOf 101
 3. P72 提示
 > 内部实现[[Call]]方法的对象在`typeof`方法，都会返回`function`
 什么是 [[Call]]方法？？？
+
+4. valueOf, toString(), toLocaleString() 各种类型的区别
