--- a/md/高程.md
+++ b/md/高程.md
@@ -416,6 +416,53 @@ Array.isArray(xxx_arr); // 任何情况都行， es5开始支持(ie9+)
 2. slice(begin, end) 包括b不包e, begin开始的位置，可以用负数来表示位置,如果缺少end,则到最后， 如果 begin >= end,则返回[]
 3. splice(begin, num, val, val,val,val) begin为起始位置,num为数量(不填则表示到数组末尾, 负数则默认为0),val为插入的值(可不填),可以插入多个值. 
 
+#### 位置方法
+1. indexOf(val, begin) 从begin的位置开始向后查找val(严格相等),如果找得到就返回对应的index，没找到就返回-1
+2. lastIndexOf(val, begin) 从begin的位置开始向前查找val(严格相等),如果找得到就返回对应的index，没找到就返回-1
+
+#### 迭代方法
+> es5定义了以下5个方法,每个方法接受2个参数，方法上运行的函数和运行该函数的作用与对象(可选).其中第一个参数函数`fun`提供三个参数,数组项的值`item`、数组项所在的位置`index`和数组本身`arr`.
+1. some() -- fun中有一个的item都返回 true，则返回true，否则就返回false
+2. every() -- fun中所有的item都返回 true，则返回true，否则就返回false
+3. filter() -- 返回 fun中返回true的item组成的数组
+4. forEach() -- 对每一项运行fun，没有返回值(一般用来代替for循环,但是不可主动break)
+5. map() -- 对每一项运行fun,并将return的值组成一个数组返回
+
+#### 缩小方法
+> es5定义了两个缩小数组的方法: reduce()和reduceRight, reduce是从前往后，reduceRight是从后往前.每个函数都接受两个参数fun和initValue(可选). 其中fun默认4个参数, 前一个值`prev`,当前值`cur`,索引`index`,数组对象`arr`.
+
+
+### Date类型
+> new Date(Date.UTC(year,month[,date[,hrs[,min[,sec[,ms]]]]])), new Date接受一个距离1970-1-1 00:00:00的毫秒数. `new Date(Date.UTC(year,month[,date[,hrs[,min[,sec[,ms]]]]]))`等同于`new Date('year', 'month',.....)`
+
+> 可以用`Date.now()`来获取当前时间相聚 1970-1-1 00:00:00的毫秒数
+
+#### 继承的方法
+1. toLocaleString() 根据浏览器的设置时区，返回对应时区的时间. 带有pm am
+2. toString() 输出0时区标准时间
+3. valueOf() 返回 毫秒数 -- 一般用来比较大小
+
+#### 时间格式化方法
+1. toDateString() -- `a.toDateString();//"Thu Aug 23 2018"`
+2. toTimeString() -- `a.toTimeString();//"11:46:29 GMT+0800 (中国标准时间)"`
+3. toLocaleDateString() -- `a.toLocaleDateString();//"2018/8/23"`
+4. toLocaleTimeString() -- `a.toLocaleTimeString();//"上午11:46:29"`
+5. toUTCString() -- `a.toUTCString();//"Thu, 23 Aug 2018 03:46:29 GMT"`
+
+### RegExp类型
+> g匹配全部，不写则匹配第一个.<br>
+> i 忽略大小写<br>
+> m 多行模式<br>
+> { [ \ ^ $ | ] ? * + . }<br>
+> for循环中,正则表达式的字面量 不会重新匹配原字符串，会在上次匹配的后面开始匹配(只会改变其lastIndex)。 而 用 new RegExp生成的则会重新从0的index开始匹配.
+
+#### 实例属性
+1. global 是否设置 g
+2. ignoreCase 是否设置 i
+3. multiline 是否设置 m
+4. lastIndex test的时候从哪个index开始
+5. source 实例的字符串形式
+
 
 # ask:
 1. P48页的toString方法问题
