--- a/md/高程.md
+++ b/md/高程.md
@@ -416,6 +416,24 @@ Array.isArray(xxx_arr); // 任何情况都行， es5开始支持(ie9+)
 2. slice(begin, end) 包括b不包e, begin开始的位置，可以用负数来表示位置,如果缺少end,则到最后， 如果 begin >= end,则返回[]
 3. splice(begin, num, val, val,val,val) begin为起始位置,num为数量(不填则表示到数组末尾, 负数则默认为0),val为插入的值(可不填),可以插入多个值. 
 
+### function
+#### 函数内部属性
+1. arguments 是 函数自带的一个属性，在函数中为 传入参数的集合(伪数组)
+```js
+// 使用arguments.callee指向函数
+function factorial(num){
+    if(num <= 1){
+        return 1
+    }else{
+        return num * arguments.callee(num-1)
+    }
+}
+```
+2. caller
+
+#### 函数属性和方法
+1. length  funName.length 返回函数希望接收的参数个数
+2. prototype 中有 call和apply,bind方法,apply第二个参数接收数组.bind方法返回一个函数而不是执行结果
 
 # ask:
 1. P48页的toString方法问题
@@ -447,3 +465,5 @@ bbb + '1' // valueOf 101
 什么是 [[Call]]方法？？？
 
 4. valueOf, toString(), toLocaleString() 各种类型的区别
+
+5. 函数的caller 和arguments.caller作用
