--- a/md/高程.md
+++ b/md/高程.md
@@ -463,6 +463,17 @@ Array.isArray(xxx_arr); // 任何情况都行， es5开始支持(ie9+)
 4. lastIndex test的时候从哪个index开始
 5. source 实例的字符串形式
 
+#### 实例方法
+1. exec()
+```js
+var text = "mom and dad and baby";
+var pattern = /mom( and dad ( and baby )?)?/gi
+
+var matches = pattern.exec(text);
+alert(matches.index); // 0
+alert(matches.input); // "mom and dad and baby"
+alert(matches[0]); // "mom and dad and baby"
+```
 
 # ask:
 1. P48页的toString方法问题
