--- a/md/高程.md
+++ b/md/高程.md
@@ -493,6 +493,19 @@ function factorial(num){
 1. length  funName.length 返回函数希望接收的参数个数
 2. prototype 中有 call和apply,bind方法,apply第二个参数接收数组.bind方法返回一个函数而不是执行结果
 
+### 基本包装类型
+```js
+var a = 'aaa';
+var b = a;
+```
+等价于
+```js
+var a = 'aaa';
+var c = new String('aaa');
+var b = c.substring(0);
+c = null;
+```
+
 # ask:
 1. P48页的toString方法问题
 ```js
