--- a/md/高程.md
+++ b/md/高程.md
@@ -506,6 +506,10 @@ var b = c.substring(0);
 c = null;
 ```
 
+#### Boolean类型
+> 使用 new Boolean来生成实例，会重写valueOf和toString方法。   Number也是
+
+
 # ask:
 1. P48页的toString方法问题
 ```js
@@ -538,3 +542,5 @@ bbb + '1' // valueOf 101
 4. valueOf, toString(), toLocaleString() 各种类型的区别
 
 5. 函数的caller 和arguments.caller作用
+
+6. `Boolean类型`中说到 new Boolean会重写 valueof和toString方法，但是 返回结果和直接声明的没有区别.所以到底重写了啥
