--- a/md/高程.md
+++ b/md/高程.md
@@ -509,6 +509,15 @@ c = null;
 #### Boolean类型
 > 使用 new Boolean来生成实例，会重写valueOf和toString方法。   Number也是
 
+#### Number类型
+1. toString()转字符串
+2. toFixed(len); 转化成有len长度小数的数值,会四舍五入
+3. toExponential(); 返回 e表示的数值
+
+#### String类型
+1. concat 和arr的concat一样, 不如直接使用 + 实现
+2. substring, substr, slice 第一个参数是起始位.第二个参数substr为长度，其余是index.如果传入为负数,第一个参数slice和substr将其转为与长度相加，substring转为0.第二个参数substr和substring转为0,slice转换成与长度相加.其中substring如果 第一个参数比第二个参数大，则会调换两个参数的位置.
+
 
 # ask:
 1. P48页的toString方法问题
