--- a/md/高程.md
+++ b/md/高程.md
@@ -517,8 +517,9 @@ c = null;
 #### String类型
 1. concat 和arr的concat一样, 不如直接使用 + 实现
 2. substring, substr, slice 第一个参数是起始位.第二个参数substr为长度，其余是index.如果传入为负数,第一个参数slice和substr将其转为与长度相加，substring转为0.第二个参数substr和substring转为0,slice转换成与长度相加.其中substring如果 第一个参数比第二个参数大，则会调换两个参数的位置.
-
-
+3. trim() 用于去除str前后的空格，chrome8+还支持 trimLeft()和trimRight()
+4. toLowerCase() toLocaleLowerCase() toUpperCase() toLocaleUpperCase() 优先选择含有locale的方法
+5. match str.match(RegExp) 结果和 RegExp.exec(str)一样, 获得一个数组，第一个为 符合条件的str，后面为捕获的str(在RegExp中用()包括的)
 # ask:
 1. P48页的toString方法问题
 ```js
