--- a/md/高程.md
+++ b/md/高程.md
@@ -520,6 +520,9 @@ c = null;
 3. trim() 用于去除str前后的空格，chrome8+还支持 trimLeft()和trimRight()
 4. toLowerCase() toLocaleLowerCase() toUpperCase() toLocaleUpperCase() 优先选择含有locale的方法
 5. match str.match(RegExp) 结果和 RegExp.exec(str)一样, 获得一个数组，第一个为 符合条件的str，后面为捕获的str(在RegExp中用()包括的)
+6. localeCompare() str1.localeCompare(str2) 比较str1和str2的大小,即字母表位置  -1 小于  0 相等 1大于
+7. fromCharCode() 和 charCodeAt() 互为相反方法
+
 # ask:
 1. P48页的toString方法问题
 ```js
