--- a/translate/10-8-现代前端框架存在的理由.md
+++ b/translate/10-8-现代前端框架存在的理由.md
@@ -91,25 +91,40 @@ What about web components?
 很多时候,人们将web组件和react,angular,vue比较.这是一个清楚的`指示器`,很多人没有理解最大的`好处`这些框架提供的:保持UI状态的同步性.而且web组件在这方面没有提供任何东西.他们只是提供一个 template 标签,但是它没有提供任何的一致`机能`.如果你想要使用web组件,并且想在app中使UI与`内部`状态同步,你必须手动完成,或者你可以使用一些类似于Stencil.js(它`内部`使用了虚拟dom,类似于React).
 Many times people compare React, Angular and Vue.js with web components. This is a clear `indicator` that many people do not understand the biggest `benefit` these frameworks provide: keeping the UI in sync with the state. And web components doesn’t provide anything for that. They just provide a <template> tag but it doesn’t provide any reconciliation mechanism. If you want to use web components and have the UI in sync with the `internal` state of your app you have to do it by hand, or you can use something like Stencil.js (which `internal`ly uses a Virtual DOM, like React).
 
-But let’s make it clear: it is not the components the great potential of these technologies: it is having always the UI in sync with the state. Web components doesn’t provide anything for it out of the box, and you have to use third party libraries to solve that (or do it by hand). It is not possible to write complex, efficient and easy to maintain UIs with Vanilla JavaScript. That’s the main reason you need a modern JavaScript framework.
+`让我们明确一点`: 关于科技最大的`潜力`不是组件:他总是保持UI和state的同步. Web组件`直接[开箱即用]`没有提供任何东西关于同步的东西,而且你必须使用第三方库来解决这个问题(或者手动解决).这是不可能的去写复杂有效而且`易于维护`的UI通过基础的js.这就是最主要的原因你需要一个现代js框架.
+But `let’s make it clear`: it is not the components the great `potential` of these technologies: it is having always the UI in sync with the state. Web components doesn’t provide anything for it `out of the box`, and you have to use third party libraries to solve that (or do it by hand). It is not possible to write `complex`, efficient and `easy to maintain` UIs with Vanilla JavaScript. That’s the main reason you need a modern JavaScript framework.
 
+自己动手干
 Do it yourself
-I love to learn the fundamentals of things and it turns out that there are Virtual DOM implementations out there. So, why don’t we try to rewrite our vanilla UI implementation just using a Virtual DOM implementation without the help of any existing framework?
+我喜欢学习事情的`原理`,而且`结果发现`这是虚拟dom`实现方式`在这之外.所以, 为什么我们不尝试使用一个不依靠任何已有框架的帮助的虚拟dom去重写我们vanilla UI.
+I love to learn the fundamentals of things and `it turns out that` there are Virtual DOM `implementations` out there. So, why don’t we try to rewrite our vanilla UI implementation just using a Virtual DOM implementation without the help of any existing framework?
 
-Here’s the core of the framework, the base class for any component.
+这是框架的`核心`,任何组件的基础类型.
+Here’s the `core` of the framework, the base class for any component.
 看图
-And here’s the reimplementation of the AddressList component (with the help of a babel transform to support JSX):
+
+而且这是 地址列表组件 `重新实现`.(通过一个babel的帮助来支持jsx)
+And here’s the `reimplementation` of the AddressList component (with the help of a babel transform to support JSX):
 看图
-Now the UI is declarative and we haven’t used any framework. We can implement new logic that changes the state in whatever way, and we don’t have to write additional code to keep the UI in sync. Problem solved!
 
-Now, except for the event handling, this looks like a lot like a React app, right? We haverender() ,componentDidMount() , setState() ,… Once you solve the problem of keeping the UI in sync with the internal state of the application, everything else stacks up naturally.
+现在UI是`公开的`,而且我们不用使用任何框架.我们可以`实现`新的`逻辑`在任何方法改变状态,而且我们不必写`额外的`代码来保持UI的同步.问题解决！
+Now the UI is `declarative` and we haven’t used any framework. We can `implement` new `logic` that changes the state in whatever way, and we don’t have to write `additional` code to keep the UI in sync. Problem solved!
 
+现在除了对事件的处理,这看起来有点像react app,是吗? 我们有xxx 方法,一旦我们解决了 保持UI 和 `内部`state 同步的问题,`自然地`每件事情都`堆叠起来[好起来]`.
+Now, except for the event handling, this looks like a lot like a React app, right? We haverender() ,componentDidMount() , setState() ,… Once you solve the problem of keeping the UI in sync with the `internal` state of the application, everything else `stacks up` `naturally`.
+
+你可以在github项目中找到全部的源代码.
 You can find the full source code in this Github repository.
 
+结论
 Conclusions
+现代框架解决最主要的问题就是 UI和state同步的问题.
 The main problem modern JavaScript frameworks solve is keeping the UI in sync with the state.
+这不必使用Vanilla JS 去写一个 复杂的 高效的 简单的 易于维护的 UIS.
 It is not possible to write complex, efficient and easy to maintain UIs with Vanilla JavaScript.
+web组件没有为这个问题提供一个解决方式。
 Web components do not provide a solution to this problem.
+不在困难使用一个已存在的虚拟DOM库来构造你自己的框架.但是 我不支持你这么做！
 It’s not that hard to make your own framework using an existing Virtual DOM library. But I’m not suggesting you to do that!
 
 
@@ -134,3 +149,7 @@ provide 提供
 by far 到目前为止  --------- 长远来说???
 
 since
+
+technologies 科技 konwleage 知识？？？
+
+it truns out that there are xxx out there. 这里有xxx
