--- a/translate/10-8-现代前端框架存在的理由.md
+++ b/translate/10-8-现代前端框架存在的理由.md
@@ -25,10 +25,10 @@ Keeping the UI in `sync` with the state is hard
 
 是的,只有这个原因,然后让我们看下为什么
 Yes, that’s it, and let’s see why
-想象你`实现`一个用户可以通过介绍他的邮箱地址来`邀请`许多人的web应用.UX/UI设计者做了这样一个决定:这有一个展示帮助信息的label的空state,在其他`情况(state)`,我们展示邮箱地址,`在右边`有一个button/link去删除他们.
+想象你`实现`一个用户可以通过`介绍`他的邮箱地址来`邀请`许多人的web应用.UX/UI设计者做了这样一个决定:这有一个展示帮助信息的label的空state,在其他`情况(state)`,我们展示邮箱地址,`在右边`有一个button/link去删除他们.
 Imagine you are `implementing` a web application where the user can `invite` many people by `introducing` their email addresses. The UX/UI designer makes this decision: there is an empty state where we show a label with some help text, in any other `case` we show the email addresses with a button/link to delete them `to the right`.
 
-表单的状态`基本上`是一个由邮件地址加一个唯一`标识符`组成的数组.开始的时候,这是空的.当通过`添加文字`和`敲击回车`来添加一个邮箱地址,你把`输入的邮箱地址`添加到数组中,并且更新了UI.当用户点击"delete",你删除邮箱地址并更新UI.你看到了吗?每当你改变state,你需要更新UI.
+表单的状态`基本上`是一个由邮件地址加一个唯一`标识符`组成的数组.`开始的时候`,这是空的.当通过`添加文字`和`敲击回车`来添加一个邮箱地址,你把`输入的邮箱地址`添加到数组中,并且更新了UI.当用户点击"delete",你删除邮箱地址并更新UI.你看到了吗?每当你改变state,你需要更新UI.
 The state of this form can be `basically` an array of objects containing the email addresses plus a unique `identifier`. `Initially` it will be empty. When adding an email address by `typing it` and `hitting enter` you add `the typed email address` to the array and update the UI. When the user clicks on “delete” you delete the email address and update the UI. Have you seen that? Every time you change the state, you need to update the UI.
 
 所以呢? 好的,看下我们如何在没有框架的帮助下`实现`上面的更新操作.
