--- a/translate/10-8-现代前端框架存在的理由.md
+++ b/translate/10-8-现代前端框架存在的理由.md
@@ -43,7 +43,7 @@ run 看图
 The code `illustrates` very well `the amount of work` needed to make a somewhat complex UI with vanilla JavaScript (using classic libraries such as jQuery would have been similar).
 
 这个例子中,静态的`体系`在html上被创建,`反之` `动态的 素材`在js里被创建(使用document.createElement).这里有一个问题:构建UI的js代码可读性不是很好而且我们需要在两个地方`定义`UI.我们可以使用`innerHTML`,它的可读性会好很多,但是效率低,而且会造成`导致 跨 站 脚本`的漏洞.我们`也`可以使用`模板 引擎`,但是如果你`重新生成[再生]`一个大的`dom 树`,你会有两个问题: `效率不高`和你必须经常和事件处理重新建立连接.
-In the example the static `structure` is created in the HTML, `whereas` the dynamic stuff is created in JavaScript (with document.createElement). This is the first problem: the JavaScript code that builds the UI is not very readable and we are `defining` the UI in two different parts. We could have used `innerHTML` and it could have been more readable but it’s `less efficient` and can `cause Cross Site Scripting` bugs. We could have used a `templating engine` `as well`, but if you `regenerate` a big `subtree of the DOM` you have two problems: is `not very efficient` and you have to usually reconnect the event handlers.
+In the example the static `structure` is created in the HTML, `whereas` the `dynamic` `stuff` is created in JavaScript (with document.createElement). This is the first problem: the JavaScript code that builds the UI is not very readable and we are `defining` the UI in two different parts. We could have used `innerHTML` and it could have been more readable but it’s `less efficient` and can `cause Cross Site Scripting` bugs. We could have used a `templating engine` `as well`, but if you `regenerate` a big `subtree of the DOM` you have two problems: is `not very efficient` and you have to usually reconnect the event handlers.
 
 但是,这不是最严重的问题.最严重的问题是在每次改变都会更新UI.每当state改变,就会有大量的代码去更新UI.当在实例中添加一个邮箱地址,花费了两行代码区更新state,但是13行代码去更新UI.而且我们`尽可能的简单`来设计UI！
 But that’s not the biggest problem. The biggest problem is always updating the UI on every state change. Every time the state is updated there is a lot of code required to update the UI. When adding an email address in the example it takes 2 lines of code to update the state, but 13 lines to update the UI. And we made the UI `as simple as possible`!!
@@ -54,7 +54,7 @@ But that’s not the biggest problem. The biggest problem is always updating the
 It is not only hard to write and hard to `reason about`, but more importantly: it is also `extremely` `fragile`. Imagine we need to implement the ability to sync the list with a server. We will need to compare our data with the data received from the server. This `involves` comparing all the identifiers and the content (we could have in `memory` a copy of a record with the the same identifier but with different data). 
 
 我们将需要实现大量`ad-hoc``呈现`代码有效`改变`DOM.如果我们产生了任何微小的错误,UI将会与数据不同步: 丢失信息,展示错误信息或者完全`搞乱 elements``对使用者没有做出相应`或`甚至 更加糟糕`,`触发`错误的操作(`例如` 点击一个删除按钮删除错误的item).
-We will need to implement a lot of ad-hoc presentation code to mutate the DOM efficiently. And if we make any minimal mistake, the UI will be `out of sync from the data`: missing information, showing wrong information, or completely `messed up` with elements `not responding to the user` or `even worse`, triggering wrong actions (e.g. clicking on a delete button deletes the wrong item).
+We will need to implement a lot of ad-hoc `presentation` code to `mutate` the DOM efficiently. And if we make any minimal mistake, the UI will be `out of sync from the data`: missing information, showing wrong information, or completely `messed up` with elements `not responding to the user` or `even worse`, `triggering` wrong actions (e.g. clicking on a delete button deletes the wrong item).
 
 所以,保持UI同步数据`涉及`写大量的`繁琐的` `虚弱的` `不健壮的代码`
 So, maintaining the UI in sync with the data `involves` writing a lot of `tedious`, `fragile`, and `fragile code`.
