--- a/translate/10-8-现代前端框架存在的理由.md
+++ b/translate/10-8-现代前端框架存在的理由.md
@@ -81,18 +81,18 @@ How does it work?
 There are two basic `strategies`:
 
 重新render整个组件: react. 当组件状态发生改变,他会在内存中render DOM,并且将他和已存在的DOM进行比较.事实上,过程很`昂贵的`，它render一个虚拟DOM然后比较提供的虚拟DOM的 `快照`[之前的虚拟DOM].接着它`计算`改变和`执行`相同的改变在真实的DOM.这个过程被叫做`reconciliation[和解]`.
-Re-render the whole component: React. When the state of a component changes it renders a DOM in memory and compares it with the existing DOM. Actually since that would be very `expensive` it renders a Virtual DOM and compares it with the previous Virtual DOM `snapshot`. Then it calculates the changes and performs the same changes to the real DOM. This process is called reconciliation.
+Re-render the whole component: React. When the state of a component changes it renders a DOM in memory and compares it with the existing DOM. Actually since that would be very `expensive` it renders a Virtual DOM and compares it with the previous Virtual DOM `snapshot`. Then it `calculates` the changes and `performs` the same changes to the real DOM. This process is called reconciliation.
 
 使用观察者观察变化：Angular和Vue.`观察`状态`变量`,当状态变量涉及到时,再将该部分DOM进行改变.
 Watch for changes using observers: Angular and Vue.js. Your state `variables` are `observed` and when they change only the DOM elements where those values are/were involved in the rendering are updated.
 
 web组件是怎么实现的?
 What about web components?
-很多时候,人们将web组件和react,angular,vue比较.这是一个清楚的`指示器`,很多人没有理解最大的`好处`这些框架提供的:保持UI状态的同步性.而且web组件在这方面没有提供任何东西.他们只是提供一个 template 标签,但是它没有提供任何的一致`机能`.如果你想要使用web组件,并且想在app中使UI与`内部`状态同步,你必须手动完成,或者你可以使用一些类似于Stencil.js(它`内部`使用了虚拟dom,类似于React).
-Many times people compare React, Angular and Vue.js with web components. This is a clear `indicator` that many people do not understand the biggest `benefit` these frameworks provide: keeping the UI in sync with the state. And web components doesn’t provide anything for that. They just provide a <template> tag but it doesn’t provide any reconciliation mechanism. If you want to use web components and have the UI in sync with the `internal` state of your app you have to do it by hand, or you can use something like Stencil.js (which `internal`ly uses a Virtual DOM, like React).
+很多时候,人们将web组件和react,angular,vue比较.这是一个清楚的`指示器`,很多人没有理解最大的`好处`这些框架提供的:保持UI状态的同步性.而且web组件在这方面没有提供任何东西.他们只是提供一个 template 标签,但是它没有提供任何的`一致``机能`.如果你想要使用web组件,并且想在app中使UI与`内部`状态同步,你必须手动完成,或者你可以使用一些类似于Stencil.js(它`内部`使用了虚拟dom,类似于React).
+Many times people compare React, Angular and Vue.js with web components. This is a clear `indicator` that many people do not understand the biggest `benefit` these frameworks provide: keeping the UI in sync with the state. And web components doesn’t provide anything for that. They just provide a <template> tag but it doesn’t provide any `reconciliation` `mechanism`. If you want to use web components and have the UI in sync with the `internal` state of your app you have to do it by hand, or you can use something like Stencil.js (which `internal`ly uses a Virtual DOM, like React).
 
 `让我们明确一点`: 关于科技最大的`潜力`不是组件:他总是保持UI和state的同步. Web组件`直接[开箱即用]`没有提供任何东西关于同步的东西,而且你必须使用第三方库来解决这个问题(或者手动解决).这是不可能的去写复杂有效而且`易于维护`的UI通过基础的js.这就是最主要的原因你需要一个现代js框架.
-But `let’s make it clear`: it is not the components the great `potential` of these technologies: it is having always the UI in sync with the state. Web components doesn’t provide anything for it `out of the box`, and you have to use third party libraries to solve that (or do it by hand). It is not possible to write `complex`, efficient and `easy to maintain` UIs with Vanilla JavaScript. That’s the main reason you need a modern JavaScript framework.
+But `let’s make it clear`: it is not the components the great `potential` of these technologies: it is having always the UI in sync with the state. Web components doesn’t provide anything for it `out of the box`, and you have to use third party libraries to solve that (or do it by hand). It is not possible to write complex, efficient and `easy to maintain` UIs with Vanilla JavaScript. That’s the main reason you need a modern JavaScript framework.
 
 自己动手干
 Do it yourself
