--- a/md/高程.md
+++ b/md/高程.md
@@ -523,7 +523,60 @@ c = null;
 6. localeCompare() str1.localeCompare(str2) 比较str1和str2的大小,即字母表位置  -1 小于  0 相等 1大于
 7. fromCharCode() 和 charCodeAt() 互为相反方法
 
+### 单体内置对象
 
+#### global
+1. encodeURI 对除url本身的符号转义 encodeURIComponent 除了.之类的特殊符号,其他符号都转义
+2. 对应1中2个方法 有 decodeURI, decodeURIComponent
+3. 这四个办法用来替换 ECMA-262 第三版废弃的 escape, escape只能转义ASCII字符， 现在转义所有Unicode
+
+#### Math
+1. Math.ceil() 向上取整
+2. Math.floor() 向下取整
+3. Math.round() 四舍五入
+
+## 面向对象编程
+> 对象是无序属性的集合,其属性可以包含基本值、对象或函数.
+### 理解对象
+#### 属性类型
+> 对象的内部值特性会用`[[]]`包起来,比如`[[Enumerable]]`,es中有两种属性 数据属性和访问器属性 <br>
+> 使用 `Object.defineProperty`来定义,比如 `Object.defineProperty(person, 'name', {writable: false})`就不能被修改了,如果属性没写全,则默认被设置为false.
+1. 数据属性: `[[Configurable]]` 能否通过delete来删除属性 true, `[[Enumerable]]` 能否通过for-in循环返回属性 true, `[[Writable]]` 能否修改属性值 true,`[[Value]]` 包含这个属性的数据值 undefined.<br/>
+设置`configurable:false`以后,就只能设置writable属性,其他都不行.
+
+2. 访问器属性: getter和setter函数,读取时调用getter函数,写入时调用setter函数.有以下四个特性:<br/>
+`[[Configurable]]` 能否通过delete来删除属性 true, `[[Enumerable]]` 能否通过for-in循环返回属性 true,`[[Get]]` 在读取属性时调用的函数 undefined,`[[Set]]` 在写入属性时调用的函数 undefined
+```js
+var book = {
+  _year: 2004,
+  edition: 1
+}
+console.log(book); // { _year: 2004, edition: 1 }
+Object.defineProperty(book, "year", {
+  get: function(){
+    return this._year
+  },
+  set: function(newValue){
+    if(newValue > 2004)
+    this._year = newValue;
+    this.edition = newValue -2004
+  }
+})
+
+console.log(book); // { _year: 2004, edition: 1 }
+console.log(book.year); // 2004
+book.year = 2000;
+console.log(book); // { _year: 2004, edition: -4 }
+console.log(book.year); // 2004
+book.year = 2011;
+console.log(book); // { _year: 2011, edition: 7 }
+console.log(book.year); // 2011
+```
+3. 定义多个属性可以使用 `Object.defineProperties(obj, {属性名: {内部值:值}}`. ie9 +
+4. 查看内部值可以使用 `Object.getOwnPropertyDescriptor(obj, 属性名)`. ie9+
+
+### 创建对象
+#### 工厂模式
 
 # ask:
 1. P48页的toString方法问题
@@ -559,3 +612,6 @@ bbb + '1' // valueOf 101
 5. 函数的caller 和arguments.caller作用
 
 6. `Boolean类型`中说到 new Boolean会重写 valueof和toString方法，但是 返回结果和直接声明的没有区别.所以到底重写了啥
+
+# 严格模式
+1. 写入只设置了getter会报错,读取只设置setter也会报错.
