--- a/md/高程.md
+++ b/md/高程.md
@@ -576,7 +576,14 @@ console.log(book.year); // 2011
 4. 查看内部值可以使用 `Object.getOwnPropertyDescriptor(obj, 属性名)`. ie9+
 
 ### 创建对象
-#### 工厂模式
+> [参考](面向对象的js.md)
+#### 工厂模式 function - 返回obj
+#### 构造函数模式 - this
+#### 原型模式 - this.prototype
+#### 组合使用构造函数模式和原型模式 - this + this.prototype
+#### 动态原型模式
+#### 寄生构造函数模式
+#### 稳妥构造函数模式
 
 # ask:
 1. P48页的toString方法问题
