--- a/md/高程.md
+++ b/md/高程.md
@@ -578,12 +578,99 @@ console.log(book.year); // 2011
 ### 创建对象
 > [参考](面向对象的js.md)
 #### 工厂模式 function - 返回obj
+> 直接利用function返回obj来生成obj. 和寄生构造函数模式区别就是 obj是直接调用函数生成还是new出来的区别
+```js
+function Person(name,age){
+    var obj = new Object();
+    obj.name = name;
+    obj.age = age;
+    obj.sayName = function(){
+        console.log(this.name)
+    }
+    return obj;
+}
+
+var obj = Person('billy',23);
+```
 #### 构造函数模式 - this
+> 利用构造函数来new出obj
+```js
+function Person(name, age){
+    this.name = name;
+    this.age= age;
+}
+var obj = new Person('billy',23);
+```
 #### 原型模式 - this.prototype
-#### 组合使用构造函数模式和原型模式 - this + this.prototype
+> 将值添加到构造函数的原型上,因为实例可以根据原型链查找,所以最终会被找到
+```js
+function Person(){}
+Person.prototype.name = 'billy';
+Person.prototype.age = 23;
+Person.prototype.getSome = function(){
+    console.log('something')
+};
+
+var obj = new Person();
+```
+#### 组合使用构造函数模式和原型模式 - this +this.prototype
+> 由于构造函数的私有性和原型模式的共用性,将两者结合,私有属性用构造函数,共有属性用原型模式
+```js
+function Person(name, age){
+    this.name = name;
+    this.age= age;
+}
+Person.prototype.getSome = function(){
+    console.log('something')
+};
+
+var obj = new Person('billy',23);
+```
 #### 动态原型模式
-#### 寄生构造函数模式
+> 在构造函数内部增加一个判断语句,当第一次调用时,为其原型上添加一个function
+```js
+function Person(name, age){
+    this.name = name;
+    this.age= age;
+    if(typeof Person.prototype.getSome !== 'function'){
+        Person.prototype.getSome = function(){
+            console.log('something')
+        };
+    }
+}
+
+var obj = new Person('billy',23);
+```
+#### 寄生构造函数模式 构造函数内部 new一个obj,最后返回obj
+> 构造函数内部 new一个obj,最后返回obj
+```js
+function Person(name,age){
+    var obj = new Object();
+    obj.name = name;
+    obj.age = age;
+    obj.sayName = function(){
+        console.log(this.name)
+    }
+    return obj;
+}
+
+var obj = new Person('billy',23);
+```
 #### 稳妥构造函数模式
+> 构造函数内部 new一个obj，可以设置一些变量(和obj无关)，然后用obj.getName返回该变量,最后返回obj.外部调用时,不用使用new
+```js
+function Person(name){
+    var obj = new Object();
+    var name = name;
+    obj.getName = function(){
+        console.log(name);
+    }
+    return obj;
+}
+
+var obj = Person('billy');
+obj.getName(); // billy
+```
 
 # ask:
 1. P48页的toString方法问题
