--- a/md/高程.md
+++ b/md/高程.md
@@ -671,6 +671,23 @@ function Person(name){
 var obj = Person('billy');
 obj.getName(); // billy
 ```
+# 事件
+## dom2级事件处理程序
+> addEventListener 和 removeEventListener 方法
+```js
+var b = document.getElementsByClassName('b')[0];
+    b.addEventListener('click', ()=>{
+      console.log(1111);
+      event.stopPropagation(); //阻止冒泡
+    }, false)
+    var xx = ()=>{
+      console.log(222222222222);
+      // event.stopPropagation();
+    }
+    b.addEventListener('click', xx, false);
+    // 任一参数不同,就不会被remove
+    b.removeEventListener('click', xx, false);
+```
 
 # ask:
 1. P48页的toString方法问题
