--- a/md/高程.md
+++ b/md/高程.md
@@ -689,6 +689,26 @@ var b = document.getElementsByClassName('b')[0];
     b.removeEventListener('click', xx, false);
 ```
 
+### copy事件
+```js
+// 一定要在copy事件中使用,否则不会存在剪切板
+node.addEventListener('copy', ()=>{
+    window.getSelection().selectAllChildren(document.getElementById('cp'));
+})
+```
+
+# 表单
+## 基础知识
+### 提交表单
+```html
+<input type="submit" value="提交" /><!-- 普通 -->
+<button type="submit">提交</button> <!-- 自定义提交按钮 -->
+<input type="image" src='xxxurl.gif' /><!-- 图片 -->
+```
+
+# canvas绘图
+
+
 # ask:
 1. P48页的toString方法问题
 ```js
