--- a/md/高程.md
+++ b/md/高程.md
@@ -49,7 +49,7 @@ alert(message);
 ## 基础类型和 typeof
 ```js
 6大基础类型： Number String Boolean Object Undefined Null (原始类型是 去掉Object 的五种)
-typeof 返回值-7种： Number String Boolean Object Undefined Null Function(基础类型中属于Object))
+typeof 返回值-7种： Number String Boolean Object Undefined symbol Function(基础类型中属于Object))
 ```
 
 ### 数据类型
